--- a/part8/package.json
+++ b/part8/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.9.13",
+    "dotenv": "^8.2.0",
     "graphql": "^14.5.8",
     "mongoose": "^5.8.10",
     "mongoose-unique-validator": "^2.0.3"
